--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-type-animation": "^3.2.0",
+    "tailwindcss-animated": "^1.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
